--- a/.github/workflows/eunl_holdings.yml
+++ b/.github/workflows/eunl_holdings.yml
@@ -20,18 +20,39 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pandas pyarrow requests python-dateutil
-
       - name: Clone talsan/ishares (scraper)
         run: |
           git clone --depth 1 https://github.com/talsan/ishares.git vendor/ishares
+          ls -la vendor/ishares
 
-      - name: Fetch full SWDA holdings history
+      - name: Install dependencies (incl. vendor requirements)
         run: |
-          python vendor/ishares/ishares/sync_etf_downloader.py --outputpath data/ishares SWDA --overwrite
+          python -m pip install --upgrade pip
+          pip install -r vendor/ishares/requirements.txt
+          pip install pandas pyarrow requests python-dateutil
+
+      - name: Sanity check import
+        run: |
+          PYTHONPATH=vendor/ishares python - <<'PY'
+          from ishares.etf_downloader import get_etf_index
+          idx = get_etf_index()
+          print("Index rows:", len(idx))
+          PY
+
+      - name: Fetch full SWDA holdings history (module import fix)
+        env:
+          PYTHONUNBUFFERED: "1"
+        run: |
+          set -euxo pipefail
+          PYTHONPATH=vendor/ishares python -m ishares.sync_etf_downloader \
+            --outputpath data/ishares \
+            SWDA \
+            --overwrite
+
+      - name: Verify downloaded files
+        run: |
+          echo "Listing a few downloaded CSVs…"
+          ls -R data/ishares | head -n 200 || true
 
       - name: Select latest snapshot per year (>= 2010)
         run: |
